3rd party auth -> google, fb y twitter. link with other credentials (+ email and password). handling auth errors link auth -> configure deeplinks firebase and verification email when register reset pwd browser phone auth ok con prueba. sms timeout en dispositivo fisico.

--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <action
+                        android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -42,5 +44,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <!-- Facebook SDK Login Requirements -->
+       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
