--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation "androidx.browser:browser:1.2.0"
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
 
 }
 
