--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   cloud_firestore: ^1.0.0
   firebase_core: ^1.0.0
   firebase_auth: ^1.0.0
-  google_sign_in: ^4.5.9
+  google_sign_in: ^5.0.0
   http: ^0.13.0
   flutter_signin_button: ^1.1.0
   url_launcher: ^6.0.2
@@ -42,8 +42,9 @@ dependencies:
   provider: ^4.3.3
   gradient_widgets: ^0.5.2
   flutter_switch: ^0.2.0
-  geopoint: ^0.7.1
-  latlong: ^0.6.1
+  flutter_login_facebook: ^1.0.0
+  flutter_twitter_login: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
