--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,12 +29,13 @@
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action
-                        android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="myblueadapp.page.link" android:scheme="https"/>
+                <data android:host="myblueadapp.page.link" android:scheme="http"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
