--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": "12"
   },
-  "main": "src/index.js",
+  "main": "src/functions.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
