--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: frontend
-description: myBlueAd mobile app frontend
+name: myBlueAd
+description: myBlueAd cross-platform mobile app
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
