--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_login_facebook: ^1.0.0
   flutter_twitter_login: ^1.1.0
   cloud_functions: ^1.0.0
+  image_picker: ^0.7.4
+  country_picker: ^2.0.3
+  csc_picker: ^0.1.0
 
 
 dev_dependencies:
