--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
   flutter_twitter_login: ^1.1.0
   cloud_functions: ^1.0.0
   image_picker: ^0.7.4
-  country_picker: ^2.0.3
   csc_picker: ^0.2.0
-
+  flutter_speed_dial: ^3.0.5
+  firebase_analytics: ^7.1.1
 
 dev_dependencies:
   flutter_test:
