--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  webview_flutter: ^2.0.2
+  webview_flutter: ^2.0.4
   cloud_firestore: ^1.0.0
   firebase_core: ^1.0.0
   firebase_auth: ^1.0.0
@@ -71,6 +71,11 @@ flutter:
   assets:
    - assets/logo.png
    - assets/logo-completo.png
+   - assets/goodbye.html
+   - assets/joyeria.html
+   - assets/perfumeria.html
+   - assets/welcome.html
+   - assets/zapateria.html
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
