config hosting con user y admin. estructura de distintas zonas html para el boton beacon

--- a/firebase/.firebaserc
+++ b/firebase/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "mybluead-tfg"
+  },
+  "targets": {
+    "mybluead-tfg": {
+      "hosting": {
+        "admin": [
+          "myblueadstore-admin"
+        ],
+        "user": [
+          "myblueadstore-user"
+        ]
+      }
+    }
   }
 }
