--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  build_runner: ^1.11.0
+  build_test: ^1.3.0
+  build_web_compilers: ^2.12.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,11 +74,6 @@ flutter:
   assets:
    - assets/logo.png
    - assets/logo-completo.png
-   - assets/goodbye.html
-   - assets/joyeria.html
-   - assets/perfumeria.html
-   - assets/welcome.html
-   - assets/zapateria.html
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
