image picker con storage y firestore configurado. añadir y borrar fotos. update.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   csc_picker: ^0.2.0
   flutter_speed_dial: ^3.0.5
   firebase_analytics: ^7.1.1
+  firebase_storage: ^8.0.5
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
