--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   flutter_blue: ^0.8.0
   geolocator: ^7.0.3
   location: ^4.1.1
+  animated_button: ^0.2.0
+  rounded_loading_button: ^2.0.3
+
 
 dev_dependencies:
   flutter_test:
