--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   location: ^4.1.1
   animated_button: ^0.2.0
   rounded_loading_button: ^2.0.3
+  lottie: ^1.0.1
 
 
 dev_dependencies:
@@ -91,6 +92,10 @@ flutter:
    - assets/logo.png
    - assets/logo-completo.png
    - assets/logo_store.png
+   - assets/2727-qimtronics.json
+   - assets/12435-turn-on-bluetooth.json
+   - assets/perfume.jpg
+   - assets/jewel.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
