--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   animated_button: ^0.2.0
   rounded_loading_button: ^2.0.3
   lottie: ^1.0.1
+  favorite_button: ^0.0.4
 
 
 dev_dependencies:
@@ -94,10 +95,12 @@ flutter:
    - assets/logo_store.png
    - assets/2727-qimtronics.json
    - assets/12435-turn-on-bluetooth.json
+   - assets/13968-heart-click-button-action-animation.json
    - assets/perfumary.jpg
    - assets/jewelry.jpg
    - assets/shoes.jpg
    - assets/sports.jpg
+   - assets/welcome.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
