--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,15 +27,20 @@
                     android:name="io.flutter.embedding.android.SplashScreenDrawable"
                     android:resource="@drawable/launch_background"
             />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.SEND"/>
+                <data  android:mimeType="*/*"/>
+                <action android:name="android.intent.action.DIAL"/>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="android.intent.action.VIEW" />
+                <data  android:scheme="https"/>
+                <data  android:scheme="http"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="myblueadapp.page.link" android:scheme="https"/>
-                <data android:host="myblueadapp.page.link" android:scheme="http"/>
+
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
@@ -50,4 +55,5 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 </manifest>
