scanning screen card con preview del anuncio. falta on tap.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
    - assets/2727-qimtronics.json
    - assets/12435-turn-on-bluetooth.json
    - assets/13968-heart-click-button-action-animation.json
+   - assets/28316-tap-tap.json
    - assets/jewelry.jpg
    - assets/shoes.jpg
    - assets/sports.jpg
